Fix Bio page issue on iPhone

--- a/source/css/app.css.scss
+++ b/source/css/app.css.scss
@@ -203,7 +203,6 @@ body {
 
         .address {
           float: left;
-          width: 500px;
         }
       }
     }
